--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "ctype.h": "c",
-        "windows.h": "c"
+        "windows.h": "c",
+        "deleterecords.h": "c",
+        "unity.h": "c",
+        "unity_internals.h": "c"
     }
 }
