--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -1,5 +1,4 @@
-
-name: cppcheck-action
+name: Cpp-check
 on: [push]
 
 jobs:
@@ -12,4 +11,4 @@ jobs:
       - name: Install cppcheck
         run: sudo apt-get -y install cppcheck
       - name: Cppcheck code
-        run: cppcheck Stepin_Telecom-Billing-System/3_Implementation 
+        run: cppcheck 3_Implementation
